portfolio are created

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div><img class="first_parts" src="./imeretian-khachapuri-cheese-lemon-side-view_140725-11276.avif" alt=""></div>
                     <div class="second">
                         <div><img class="second_parts" src="./photorealistic-burger-meal_23-2151432928.avif" alt=""></div>
-                        <div><img class="second_parts" src="../delicious-pasta-plate_23-2150690693.avif" alt=""></div>
+                        <div><img class="second_parts" src="./delicious-pasta-plate_23-2150690693.avif" alt=""></div>
                     </div>
                 </div>
                 <div class="description">
